# mistralhack26

./: .gitignore  CLAUDE.md  PROCESS.md  README.md
.claude/: settings.local.json
.specify/memory/: constitution.md
apps/server/: pyproject.toml  startup.txt
apps/server/scripts/: test_frontend.py
apps/server/src/: config.py  deps.py  main.py
apps/server/src/agents/: __init__.py  case_match_agent.py  dispatch_agent.py  intake_agent.py  shared_deps.py  triage_agent.py  vision_agent.py
apps/server/src/models/: __init__.py  caller.py  dispatch.py  events.py  incident.py  report.py  triage.py  vision.py
apps/server/src/routes/: demo.py  health.py  report.py
apps/server/src/services/: logger.py  media.py  orchestrator.py  report_builder.py  scribe_realtime.py  state.py  transcription.py  tts.py
apps/server/src/tests/: test_phase1_models.py  test_phase2_supabase.py  test_phase3_mistral.py  test_phase4_elevenlabs.py  test_phase5_agents.py  test_phase6_orchestrator.py  test_report.py  test_smoke.py  test_vision_real.py
apps/web/: .gitignore  package-lock.json  package.json
docs/: ARCHITECTURE.md  NEXT.md
docs/MASTER/: MISTRAL_GUIDE.md  PYDANTIC_AI_DOCS.md  TEST_STORAGE_STANDARD.md
docs/PROCESS/: 260228_1545_TRIAGENET_UPDATED_PRD.md  260228_1615_TRIAGENET_HUMAN_TASKS.md  260228_1954_CALL_RESPONSE_UPDATE_PRD.md  260228_2035_DEMO_TIMING.md  260228_2113_SCRIPT_V2.md  260228_2152_SCRIBE_V2_REALTIME_PRD.md  260228_FRONTEND_FEEDBACK.md  260228_MEDIA_ASSETS_PRD.md  260228_TRIAGENET_DEMO_SCRIPT.md  260228_TRIAGENET_PRD.md  260301_0105_REPORT_PRD.md  (+3 more)
(+53 files in other folders)
